--- a/src/main/resources/MainWindow/mainWindow.fxml
+++ b/src/main/resources/MainWindow/mainWindow.fxml
@@ -36,7 +36,8 @@
                 <Label fx:id="humidity" layoutX="46.0" layoutY="122.0" styleClass="displayDetails" text="Label"/>
             </VBox>
 
-            <VBox fx:id="centerInfos" spacing="5" layoutX="295" layoutY="15">
+            <VBox fx:id="centerInfos" spacing="5" layoutX="315" layoutY="15">
+                <Label fx:id="location" styleClass="displayDetails" alignment="CENTER" text="Wien"/>
                 <Label fx:id="temp" prefHeight="56.0" prefWidth="167.0" styleClass="displayTemp" text="25 Grad"
                        textFill="WHITE">
                     <font>
