--- a/src/main/resources/Settings/settings.fxml
+++ b/src/main/resources/Settings/settings.fxml
@@ -4,12 +4,17 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="settings" styleClass="settings" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="300" minWidth="450" prefHeight="300.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Frontend.Settings">
+<AnchorPane fx:id="settings" styleClass="settings" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="300"
+            minWidth="450" prefHeight="300.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/11.0.1"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="Frontend.Settings">
    <children>
       <ChoiceBox fx:id="Temperature" layoutX="14.0" layoutY="14.0" prefHeight="45.0" prefWidth="120.0">
       </ChoiceBox>
-      <TextField fx:id="Position" layoutX="160.0" layoutY="16.0" onAction="#enterAction" onMouseExited="#mouseExit" prefHeight="45.0" prefWidth="120.0" promptText="1220, AT" />
-      <Button fx:id="Export" layoutX="311.0" layoutY="16.0" mnemonicParsing="false" onAction="#export" prefHeight="45.0" prefWidth="120.0" text="Export" />
-      <Text layoutX="352.0" layoutY="263.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Version: 1.0.0 " wrappingWidth="88.0" />
+      <TextField fx:id="Position" layoutX="160.0" layoutY="16.0" onAction="#enterAction" onMouseExited="#mouseExit"
+                 prefHeight="45.0" prefWidth="120.0" promptText="1220, AT" />
+      <Button fx:id="Export" layoutX="311.0" layoutY="16.0" mnemonicParsing="false" onAction="#export"
+              prefHeight="45.0" prefWidth="120.0" text="Export" />
+      <Text layoutX="352.0" layoutY="263.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Version: 1.0.0 "
+            wrappingWidth="88.0" />
    </children>
 </AnchorPane>
