--- a/src/main/resources/MainWindow/mainWindow.fxml
+++ b/src/main/resources/MainWindow/mainWindow.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
 <BorderPane fx:id="mainBorderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-            prefHeight="400.0" prefWidth="600.0" styleClass="myBorderPaneSunny" stylesheets="@../css/styles.css"
+            prefHeight="400.0" prefWidth="600.0" stylesheets="@../css/styles.css"
             xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="Frontend.MainWindow">
     <top>
@@ -36,7 +36,7 @@
                 <Label fx:id="humidity" layoutX="46.0" layoutY="122.0" styleClass="displayDetails" text="Label"/>
             </VBox>
 
-            <VBox fx:id="centerInfos" spacing="5" layoutX="315" layoutY="15">
+            <VBox fx:id="centerInfos" spacing="5" layoutX="280" layoutY="15" alignment="CENTER">
                 <Label fx:id="location" styleClass="displayDetails" alignment="CENTER" text="Wien"/>
                 <Label fx:id="temp" prefHeight="56.0" prefWidth="167.0" styleClass="displayTemp" text="25 Grad"
                        textFill="WHITE">
@@ -44,7 +44,7 @@
                         <Font size="45.0"/>
                     </font>
                 </Label>
-                <HBox spacing="5">
+                <HBox fx:id="dayAndDate" spacing="5">
                     <Label fx:id="dayOne" layoutX="245.0" layoutY="66.0" styleClass="displayDay"
                            text="Montag 27.08.2020" textFill="WHITE"/>
                     <Label fx:id="displayDate" layoutX="340.0" layoutY="66.0" styleClass="displayDate" text="27.08.2020"
