--- a/src/main/resources/Settings/settings.fxml
+++ b/src/main/resources/Settings/settings.fxml
@@ -1,21 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Text?>
-<AnchorPane fx:id="settings" styleClass="settings" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="300"
-            minWidth="450" prefHeight="300.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/11.0.1"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="Frontend.Settings">
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
+
+<AnchorPane fx:id="settings" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="300" minWidth="450" prefHeight="300.0" prefWidth="450.0" styleClass="settings" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Frontend.Settings">
     <children>
-        <ChoiceBox fx:id="Temperature" layoutX="14.0" layoutY="14.0" prefHeight="45.0" prefWidth="120.0">
+        <ChoiceBox fx:id="Temperature" layoutX="6.0" layoutY="16.0" prefHeight="45.0" prefWidth="120.0">
         </ChoiceBox>
-        <TextField fx:id="Position" layoutX="160.0" layoutY="16.0" onAction="#enterAction"
-                   prefHeight="45.0" prefWidth="120.0" promptText="1220, AT"/>
-        <Button fx:id="Export" layoutX="311.0" layoutY="16.0" mnemonicParsing="false" onAction="#export"
-                prefHeight="45.0" prefWidth="120.0" text="Export"/>
-        <Text layoutX="352.0" layoutY="263.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Version: 1.0.0 "
-              wrappingWidth="88.0"/>
+        <TextField fx:id="Position" layoutX="160.0" layoutY="16.0" onAction="#enterAction" prefHeight="45.0" prefWidth="120.0" promptText="1220, AT" />
+        <Button fx:id="Export" layoutX="311.0" layoutY="16.0" mnemonicParsing="false" onAction="#export" prefHeight="45.0" prefWidth="120.0" text="Export" />
+        <Text layoutX="352.0" layoutY="263.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Version: 1.0.0 " wrappingWidth="88.0" />
     </children>
 </AnchorPane>
