--- a/src/main/resources/MainWindow/mainWindow.fxml
+++ b/src/main/resources/MainWindow/mainWindow.fxml
@@ -12,15 +12,18 @@
     <top>
         <MenuBar fx:id="menuBar" styleClass="menuBar" BorderPane.alignment="CENTER">
             <menus>
-                <Menu mnemonicParsing="false" text="Options">
+                <Menu mnemonicParsing="false" text="Optionen">
                     <items>
-                        <MenuItem fx:id="settingMenu" onAction="#openSettings" mnemonicParsing="false" text="Settings"/>
+                        <MenuItem onAction="#openSettings" mnemonicParsing="false" text="Einstellungen"/>
                     </items>
                     <items>
-                        <MenuItem fx:id="closeMenu" onAction="#closeWindow" mnemonicParsing="false" text="Close"/>
+                        <MenuItem onAction="#openInfo" mnemonicParsing="false" text="Informationen"/>
+                    </items>
+                    <items>
+                        <MenuItem onAction="#closeWindow" mnemonicParsing="false" text="Exit"/>
                     </items>
                 </Menu>
-                <Menu fx:id="refreshMenu" text="Refresh" onAction="#refresh"/>
+                <Menu fx:id="refreshMenu" text="Aktualisieren" onAction="#refresh"/>
             </menus>
         </MenuBar>
 
@@ -64,7 +67,6 @@
                 <Label fx:id="moonphase" layoutX="490.0" layoutY="122.0" styleClass="displayDetails" text="Label"/>
                 <Label fx:id="feelsLike" layoutX="490.0" layoutY="122.0" styleClass="displayDetails" text="Label"/>
             </VBox>
-            <Label layoutX="360" layoutY="381" text="Background photo created by freestockcenter - www.freepik.com"/>
         </Pane>
 
     </center>
