added different image

--- a/src/main/resources/Info/info.fxml
+++ b/src/main/resources/Info/info.fxml
@@ -11,22 +11,22 @@
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="Frontend.Info"
-            prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: lightblue">
+            prefHeight="400.0" prefWidth="600.0">
 
     <center>
         <Pane>
             <Label text="Hintergrundbilder sind von freestockcenter - www.freepik.com" layoutX="10" layoutY="25" style="-fx-font-weight: bold"/>
             <Label text="Wetterdaten sind von folgenden Webseiten einsichtbar:" layoutX="10" layoutY="65" style="-fx-font-weight: bold"/>
             <Label text="&#x2022; https://openweathermap.org/" layoutX="25" layoutY="107"/>
-            <Label text="&#x2022; https://www.weatherapi.com/" layoutX="25" layoutY="167"/>
+            <Label text="&#x2022; https://www.wunderground.com/" layoutX="25" layoutY="167"/>
             <ImageView fitHeight="60" fitWidth="120" layoutX="200" layoutY="85">
                 <image>
                     <Image url="/img/openweathermap.png"/>
                 </image>
             </ImageView>
-            <ImageView fitHeight="30" fitWidth="160" layoutX="200" layoutY="160">
+            <ImageView fitHeight="40" fitWidth="160" layoutX="200" layoutY="160">
                 <image>
-                    <Image url="/img/wetterapi.PNG"/>
+                    <Image url="/img/weatherUnderground.PNG"/>
                 </image>
             </ImageView>
         </Pane>
